add spring security

--- a/modal.index.html
+++ b/modal.index.html
@@ -14,81 +14,182 @@
     Add New Crop
 </button>
 
-<div class="modal fade" id="newCropModal" tabindex="-1" aria-labelledby="newCropModalLabel" aria-hidden="true">
+<!--            add staff model-->
+<div class="modal fade" id="newStaffModal" tabindex="-1" aria-labelledby="newStaffModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="background-color: #2b2b2b; color: white;">
             <div class="modal-header">
-                <h5 class="modal-title" id="newCropModalLabel">Add New Crop Details</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
-                        style="filter: invert(1);"></button>
+                <h5 class="modal-title" id="newStaffModalLabel">Add New Staff Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="filter: invert(1);"></button>
             </div>
             <div class="modal-body">
-                <form id="cropForm">
-                    <!-- Crop Name -->
+                <form id="staffForm">
                     <div class="row mb-3">
+                        <!-- First Name -->
                         <div class="col-md-6">
-                            <label for="cropName" class="form-label">Crop Name</label>
-                            <input type="text" class="form-control" placeholder="Enter crop name" id="cropName"
-                                   required>
+                            <label for="firstName" class="form-label">First Name</label>
+                            <input type="text" class="form-control" placeholder="First name" id="firstName" required>
                         </div>
-                        <!-- Scientific Name -->
+                        <!-- Last Name -->
                         <div class="col-md-6">
-                            <label for="scientificName" class="form-label">Scientific Name</label>
-                            <input type="text" class="form-control" placeholder="Enter scientific name"
-                                   id="scientificName" required>
+                            <label for="lastName" class="form-label">Last Name</label>
+                            <input type="text" class="form-control" placeholder="Last name" id="lastName" required>
                         </div>
                     </div>
-                    <!-- Category -->
                     <div class="row mb-3">
+                        <!-- Designation -->
                         <div class="col-md-6">
-                            <label for="category" class="form-label">Category</label>
-                            <input type="text" class="form-control" placeholder="Enter crop category" id="category"
-                                   required>
+                            <label for="designation" class="form-label">Designation</label>
+                            <select class="form-control" id="designation" required>
+                                <option value="" disabled selected>Select Designation</option>
+                                <option value="MANAGER">MANAGER</option>
+                                <option value="SENIOR_ASSISTANT_MANAGER">SENIOR_ASSISTANT_MANAGER</option>
+                                <option value="ASSISTANT_MANAGER">ASSISTANT_MANAGER</option>
+                                <option value="ADMIN_HR_STAFF">ADMIN_HR_STAFF</option>
+                                <option value="OFFICE_ASSISTANT">OFFICE_ASSISTANT</option>
+                                <option value="SENIOR_AGRONOMIST">SENIOR_AGRONOMIST</option>
+                                <option value="AGRONOMIST">AGRONOMIST</option>
+                                <option value="SOIL_SCIENTIST">SOIL_SCIENTIST</option>
+                                <option value="SENIOR_TECHNICIAN">SENIOR_TECHNICIAN</option>
+                                <option value="SUPERVISOR">SUPERVISOR</option>
+                                <option value="LABOR">LABOR</option>
+                            </select>
                         </div>
-                        <!-- Season -->
+                        <!-- Gender -->
                         <div class="col-md-6">
-                            <label for="season" class="form-label">Season</label>
-                            <input type="text" class="form-control" placeholder="Enter growing season" id="season"
-                                   required>
+                            <label for="gender" class="form-label">Gender</label>
+                            <select class="form-control" id="gender" required>
+                                <option value="" disabled selected>Select gender</option>
+                                <option value="MALE">Male</option>
+                                <option value="FEMALE">Female</option>
+                            </select>
                         </div>
                     </div>
-
+                    <div class="row mb-3">
+                        <!-- Joined Date-->
+                        <div class="col-md-6">
+                            <label for="joinedDate" class="form-label">Joined Date</label>
+                            <input type="text" class="form-control" placeholder="Staff join date" id="joinedDate" required>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <!-- DOB -->
+                        <div class="col-md-6">
+                            <lab0l for="dob" class="form-label">Date Of Birth</lab0l>
+                            <input type="text" placeholder="Date Of Birth" class="form-control" id="dob" required>
+                        </div>
+                        <!-- Address Line01 -->
+                        <div class="col-md-6">
+                            <label for="addressLine01" class="form-label">Address Line01</label>
+                            <input type="text" class="form-control" placeholder="Building no" id="addressLine01" required>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <!-- Address Line02 -->
+                        <div class="col-md-6">
+                            <label for="addressLine02" class="form-label">Address Line02</label>
+                            <input type="text" class="form-control" placeholder="Lane" id="addressLine02" required>
+                        </div>
+                        <!-- Address Line03 -->
+                        <div class="col-md-6">
+                            <label for="addressLine03" class="form-label">Address Line03</label>
+                            <input type="text" class="form-control" placeholder="Main city" id="addressLine03" required>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <!-- Address Line04 -->
+                        <div class="col-md-6">
+                            <label for="addressLine04" class="form-label">Address Line04</label>
+                            <input type="text" class="form-control" placeholder="Main state" id="addressLine04" required>
+                        </div>
+                        <!-- Address Line05 -->
+                        <div class="col-md-6">
+                            <label for="addressLine03" class="form-label">Address Line05</label>
+                            <input type="text" class="form-control" placeholder="Postal code" id="addressLine05" required>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <!-- Contact NO -->
+                        <div class="col-md-6">
+                            <label for="ContactNo" class="form-label">Contact No</label>
+                            <input type="text" class="form-control" placeholder="Mobile number" id="ContactNo" required>
+                        </div>
+                        <!-- Email -->
+                        <div class="col-md-6">
+                            <label for="emailStaff" class="form-label">Email</label>
+                            <input type="text" class="form-control" placeholder="Email address" id="emailStaff" required>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <!-- Role -->
+                        <div class="col-md-6">
+                            <label for="roleStaff" class="form-label">Role</label>
+                            <select class="form-control" id="roleStaff" required>
+                                <option value="" disabled selected>Select Role</option>
+                                <option value="MANAGER">MANAGER</option>
+                                <option value="ADMINISTRATIVE">ADMINISTRATIVE</option>
+                                <option value="OTHER">OTHER</option>
+                                <option value="SCIENTIST">SCIENTIST</option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                <label for="add-fields" class="form-label">Crops</label>
-                                <button type="button" class="btn btn-success" id="addCropFieldButton">Add Fields
-                                </button>
+                                <label for="filed-staff" class="form-label">Fields</label>
+                                <button type="button" class="btn btn-success" id="addStaffFieldButton">Add Field</button>
                             </div>
                             <!-- Initial dropdown with predefined options -->
-                            <div id="initialStaffVehicle" class="input-group">
-                                <select id="add-fields" class="form-control mt-2">
+                            <div id="initialFieldStaff" class="input-group">
+                                <select id="filed-staff" class="form-control mt-2">
                                     <option value="">Select Field</option>
                                 </select>
                             </div>
                             <!-- Container for additional dynamic dropdowns -->
-                            <div id="additionalCrops" class="mt-2"></div>
+                            <div id="additionalStaffField" class="mt-2"></div>
                         </div>
+                    </div>
+                    <div class="row mb-3">
+                        <!-- Vehicle -->
                         <div class="col-md-6">
-                            <label for="cropImageFile" class="form-label">Crop Image (URL or File)</label>
-                            <!--<input type="text" class="form-control" placeholder="Enter image URL" id="cropImage">-->
-                            <!-- Optionally, if you want to allow file uploads: -->
-                            <input type="file" class="form-control mt-2" id="cropImageFile">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label for="vehicle-staff" class="form-label">Vehicle</label>
+                                <button type="button" class="btn btn-success" id="addStaffVehicleButton">Add Vehicle</button>
+                            </div>
+                            <!-- Initial dropdown with predefined options -->
+                            <div id="initialStaffVehicle" class="input-group">
+                                <select id="vehicle-staff" class="form-control mt-2">
+                                    <option value="">Select Field</option>
+                                </select>
+                            </div>
+                            <!-- Container for additional dynamic dropdowns -->
+                            <div id="additionalStaffVehicle" class="mt-2"></div>
+                        </div>
+                        <!-- Equipment -->
+                        <div class="col-md-6">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label for="equipment-staff" class="form-label">Equipment</label>
+                                <button type="button" class="btn btn-success" id="addStaffEquipmentButton">Add Equipment</button>
+                            </div>
+                            <!-- Initial dropdown with predefined options -->
+                            <div id="initialStaffEquipment" class="input-group">
+                                <select id="equipment-staff" class="form-control mt-2">
+                                    <option value="">Select Field</option>
+                                </select>
+                            </div>
+                            <!-- Container for additional dynamic dropdowns -->
+                            <div id="additionalStaffEquipment" class="mt-2"></div>
                         </div>
                     </div>
                 </form>
-
-                <div class="modal-footer">
-                    <button id="btnCloseCropDetails" type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Close
-                    </button>
-                    <button id="btnSaveCropDetails" type="submit" class="btn btn-success">Save Crop</button>
-                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="btnCloseStaffDetails" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button id="btnSaveStaffDetails" type="submit" class="btn btn-success">Save Field</button>
             </div>
         </div>
     </div>
-</div>
-
+    </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
