--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/vehicle.css">
 </head>
 
 <body>
@@ -208,11 +207,18 @@
                                 </div>
                                 <!-- Staff Member -->
                                 <div class="col-md-6">
-                                    <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
-                                        <input type="text" id="staffMember" class="form-control">
-                                        <label for="staffMember" class="form-label" style="margin-left: 0;">Staff
-                                            Member</label>
+                                    <div class="d-flex justify-content-between align-items-center mb-2">
+                                        <label for="staff-vehicle" class="form-label">Vehicle</label>
+                                        <button type="button" class="btn btn-success" id="add-vehicle-StaffButton">Add Staff</button>
                                     </div>
+                                    <!-- Initial dropdown with predefined options -->
+                                    <div id="initialVehicleStaff" class="input-group">
+                                        <select id="staff-vehicle" class="form-control mt-2">
+                                            <option value="">Select Field</option>
+                                        </select>
+                                    </div>
+                                    <!-- Container for additional dynamic dropdowns -->
+                                    <div id="additionalVehicleStaff" class="mt-2"></div>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -1006,7 +1012,7 @@
                                 <div class="col-md-6">
                                     <label for="crop-category" class="form-label">Category</label>
                                     <input type="text" class="form-control" placeholder="Enter crop category"
-                            cccccccccccccccccc               id="crop-category"
+                                        id="crop-category"
                                            required>
                                 </div>
                                 <!-- Season -->
@@ -1177,10 +1183,12 @@
     </div>
 </section>
 <script src="assets/lib/jquery-3.7.1.min.js"></script>
+<script type="module" src="controller/vehicleController.js"></script>
+<script type="module" src="controller/cropController.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
-<script type="module" src="controller/vehicleController.js"></script>
+
 </body>
 </html>
